# vzriv_sverhnovoy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  main.py
app/auth_users/: auth.py  models.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx
frontend/src/assets/: stedents_asset.html
frontend/src/hooks/: useBreakpoints.ts
frontend/src/pages/: TestPage.jsx
frontend/src/theme/: globalStyles.tsx  theme.js  theme.ts
